--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,15 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
-  <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
-  <%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>
+  <%= render 'layouts/stylesheets' %>
 </head>
 <body>
-
+  <div class="container">
+    <%= render 'layouts/header' %>
+    <section class="round">
 <%= yield %>
-
+    </section>
+    <%= render 'layouts/footer' %>
+  </div>
 </body>
 </html>
