--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -3,7 +3,7 @@
     <% if current_user.following?(@user) %>
       <%= render 'unfollow' %>
     <% else %>
-      <% render 'follow' %>
+      <%= render 'follow' %>
     <% end %>  
   </div>
 <% end %>
